--- a/Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html
+++ b/Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html
@@ -138,27 +138,27 @@ Merclin destapa cañerias concentrado - DestapacaÃ±os truper home depot
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapadora-De-Cloacas.html">Destapadora De Cloacas </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
+       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-bacha-de-la-cocina.html">Como destapar la cañeria de la bacha de la cocina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html">Maquina Destapa Cañerias Electrica </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Servicios/Hay-alguna-manera-facil-de-Destapa-cantilde;erias.html">Hay alguna manera facil de Destapa cañerias </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,22 +221,42 @@ Merclin destapa cañerias concentrado - DestapacaÃ±os truper home depot
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas.html">Destapaciones De Cloacas </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-con-maquinas.html">Destapaciones de cañerias con maquinas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañerias.html">Destapar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
+       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
+       <a href="../Destapa-Cañerias/Destapador-De-Cloaca.html">Destapador De Cloaca </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Estrategias-para-Destapa-cantilde;erias-casero-para-inodoro.html">Estrategias para Destapa cañerias casero para inodoro </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-De-Baños.html">Destapaciones De Baños </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -246,32 +266,12 @@ Merclin destapa cañerias concentrado - DestapacaÃ±os truper home depot
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cantilde;eria-De-Inodoro.html">Destapar Cañeria De Inodoro </a> 
+       <a href="../Servicios/Liquido-destapa-cañerias-casero.html">Liquido destapa cañerias casero </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html">Como destapar cañerias de desague de cocina </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
