--- a/Destapa-Cañerias/Plomero-Destapa-Cañerias.html
+++ b/Destapa-Cañerias/Plomero-Destapa-Cañerias.html
@@ -142,27 +142,27 @@ Plomero Destapa Cañerias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Desagues-Pluviales-En-Viviendas.html">Desagues Pluviales En Viviendas </a> 
+       <a href="../Destapa-Cañerias/Puedes-darme-informacion-sobre-Para-destapar-cantilde;erias.html">Puedes darme informacion sobre Para destapar cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-un-toilet.html">Como destapar un toilet </a> 
+       <a href="../Destapa-Cañerias/Camara-Para-Cloacas-Precios.html">Camara Para Cloacas Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+       <a href="../Servicios/Destapadora-De-Cañeria-en-Palermo.html">Destapadora De Cañeria en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Cantidad-de-inodoros-por-persona.html">Cantidad de inodoros por persona </a> 
+       <a href="../Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,57 +225,57 @@ Plomero Destapa Cañerias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
+       <a href="../Servicios/Desagues-Pluviales-En-Viviendas.html">Desagues Pluviales En Viviendas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Todo-Destapaciones.html">Todo Destapaciones </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
+       <a href="../Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html">Destapar Cañerias Con Grasa en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Informacion-sobre-las-estrellas.html">Informacion sobre las estrellas </a> 
+       <a href="../Servicios/Maquina-Destapaciones-De-Cantilde;erias.html">Maquina Destapaciones De Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-instrucciones.html">Harpic destapacaños instrucciones </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Servicios/Con-Que-Destapo-Una-Cañeria-en-Palermo.html">Con Que Destapo Una Cañeria en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Limpiar-Desague-Bantilde;o.html">Limpiar Desague Baño </a> 
+       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
+       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
